<resources>
    <string name="app_name">Task 1_2</string>
    <string name="moscow">Moscow</string>
    <string name="st_petersburg">St.Petersburg</string>
    <string name="new_york">New York</string>
    <string name="london">London</string>
    <string name="paris">Paris</string>
    <string name="beijing">Beijing</string>
    <string name="tokyo">Tokyo</string>
    <string name="dubai">Dubai</string>
    <string name="athens">Athens</string>
    <string name="amsterdam">Amsterdam</string>
    <string name="los_angeles">Los Angeles</string>
    <string name="barcelona">Barcelona</string>
    <string name="rome">Rome</string>
    <string name="zurich">Zurich</string>
    <string name="cairo">Cairo</string>
    <string name="singapore">Singapore</string>
    <string name="sydney">Sydney</string>
    <string name="vancouver">Vancouver</string>
    <string name="enter_city">Enter City</string>
    <string name="temperature">Temperature</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="pressure">Pressure</string>
    <string name="_12_00">12:00</string>
    <string name="_13_00">13:00</string>
    <string name="_14_00">14:00</string>
    <string name="_15_00">15:00</string>
    <string name="_16_00">16:00</string>
    <string name="_17_00">17:00</string>
    <string name="picturedubai">pictureDubai</string>
    <string name="dubaiscreen">Dubai</string>
    <string name="_30">+30</string>
    <string name="_3_5_m_s">3-5 m/s</string>
    <string name="_720mm">720mm</string>
</resources>
