<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="409dp"
        android:layout_height="550dp"
        android:layout_marginTop="32dp"
        android:background="#00F30000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CityField">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00FF0000"
            android:orientation="vertical">

            <Button
                android:id="@+id/button_Moscow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/moscow"
                android:visibility="visible" />

            <Button
                android:id="@+id/button_StPetersburg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/st_petersburg" />

            <Button
                android:id="@+id/button_NewYork"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_york" />

            <Button
                android:id="@+id/button_London"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/london" />

            <Button
                android:id="@+id/button_Paris"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/paris" />

            <Button
                android:id="@+id/button_Beijing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/beijing" />

            <Button
                android:id="@+id/button_Tokyo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tokyo" />

            <Button
                android:id="@+id/button_Dubai"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dubai" />

            <Button
                android:id="@+id/button_Athens"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/athens" />

            <Button
                android:id="@+id/button_Amsterdam"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/amsterdam" />

            <Button
                android:id="@+id/button_LosAngeles"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/los_angeles" />

            <Button
                android:id="@+id/button_Barcelona"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/barcelona" />

            <Button
                android:id="@+id/button_Rome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rome" />

            <Button
                android:id="@+id/button_Zurich"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/zurich" />

            <Button
                android:id="@+id/button_Cairo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cairo" />

            <Button
                android:id="@+id/button_Singapore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/singapore" />

            <Button
                android:id="@+id/button_Sydney"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sydney" />

            <Button
                android:id="@+id/button_Vancouver"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/vancouver" />

        </LinearLayout>
    </ScrollView>

    <EditText
        android:id="@+id/CityField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/enter_city"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/windSpeed" />

    <CheckBox
        android:id="@+id/temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        android:text="@string/temperature"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/windSpeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        android:text="@string/wind_speed"
        app:layout_constraintEnd_toStartOf="@+id/atmospere"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/temperature"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/atmospere"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="31dp"
        android:text="@string/pressure"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>